@@ -71,7 +71,7 @@ class TestBzrServe(TestCaseWithTransport):
         # server instance, the transport needs a URL.
         client_medium = medium.SmartSimplePipesClientMedium(
             process.stdout, process.stdin)
-        transport = remote.SmartTransport(
+        transport = remote.RemoteTransport(
             'bzr://localhost/', medium=client_medium)
         return process, transport
 
